--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <head>
-
+    <title>ToDoGames</title>
 </head>
 <body>
-    
+    <h1>ToDoGames</h1>
+    <p>En esta pagina podras armar listas con los juegos que comenzaste, terminaste, tus favoritos, etc. Una forma organizativa y visual de ver tu historia con los juegos.</p>
 </body>
 </html>
