--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
 <body>
     <h1>GameShelf</h1>
     <p>En esta pagina podras armar listas con los juegos que comenzaste, terminaste, tus favoritos, etc. Una forma organizativa y visual de ver tu historia con los juegos.</p>
+    <div>
+        <h1>Mis Juegos</h1>
+        <div id="gameList">
+            
+        </div>
+    </div> 
 </body>
 </html>
