--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <head>
     <title>GameShelf</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>GameShelf</h1>
     <p>En esta pagina podras armar listas con los juegos que comenzaste, terminaste, tus favoritos, etc. Una forma organizativa y visual de ver tu historia con los juegos.</p>
     <div>
-        <h1>Mis Juegos</h1>
+        <h1>Mis Juegos</h1> 
         <div id="gameList">
             
         </div>
-    </div> 
+    </div>
+    
+    <script src="app.js"></script>
 </body>
 </html>
