avances buscador con js

--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,9 @@
         <h1>GameShelf</h1>
         <p>En esta pagina podras armar listas con los juegos que comenzaste, terminaste, tus favoritos, etc. Una forma organizativa y visual de ver tu historia con los juegos.</p>
         
+        <input type="text" id="search" placeholder="Buscar en Steam..." autocomplete="off">
+        <div id="results"></div>
+
         <div class="popular-games">
             <div class="popular-header">
                 <h2>Popular Games</h2>
