Botones delete, ahora el main es el login

--- a/static/login.html
+++ b/static/login.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="static/styles.css">
     <title>Título de la Página</title>
     
 </head>
@@ -19,19 +19,19 @@
                 </div>
                 <div class="login-column">
                     <div id="login-container">
-                        <img src="./images/user_icon.svg" alt="user_icon" id="user-icon">
+                        <img src="static/images/user_icon.svg" alt="user_icon" id="user-icon">
                         <p id="user-login" class="white-text schibsted-grotesk">USER LOGIN</p>
-                        <form id="login-form" action="index.html" method="post">
+                        <form id="login-form" action="/static/index.html" method="post">
                             <input class="login-input" type="text" id="username" name="username" placeholder="Username" required>
                             <input class="login-input" type="password" id="password" name="password" placeholder="Password" required>
-                            <button class="login-btn schibsted-grotesk" type="submit" >Log In</button>
+                           <button class="login-btn schibsted-grotesk" type="submit">Log In</button>
                         </form>
                     </div>
                     <p class="white-text schibsted-grotesk">don't have an account? </p>
                     <a href="register.html" class="blue-text schibsted-grotesk">create one</a>
                 </div>
                 <div id="logo-column">
-                    <img src="./images/logo.svg" alt="Game Shelf Logo" id="login-illustration">
+                    <img src="static/images/logo.svg" alt="Game Shelf Logo" id="login-illustration">
                 </div>
             </div>
     </main>
