añadido boton de tres puntos deplegable para eliminar juego

--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>GameShelf</title>
     <link rel="stylesheet" href="/static/css/index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet"/>
 </head>
 <body>
     <div class="dashboard">
@@ -22,7 +26,17 @@
                     <div class="game-image">
                         <img src="https://placehold.co/237x357" alt="Hollow Knight: Silksong">
                     </div>
-                    <div class="game-title">Hollow Knight: Silksong</div>
+                    <div class="game-name-btn">
+                        <div class="game-title">Hollow Knight: Silksong</div>
+                        <div class="dropend">
+                            <button type="button" class="btn btn-outline-primary" style="--bs-btn-border-color: none;" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fas fa-ellipsis-v"></i>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Delete</a></li>    
+                            </ul>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="game-card">
@@ -32,12 +46,6 @@
                     <div class="game-title">Hollow Knight: Silksong</div>
                 </div>
 
-                <div class="game-card">
-                    <div class="game-image">
-                        <img src="https://placehold.co/237x357" alt="Hollow Knight: Silksong">
-                    </div>
-                    <div class="game-title">Hollow Knight: Silksong</div>
-                </div>
             </div>
         </div>
 
@@ -52,7 +60,7 @@
         </div>
     </div>
     
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="/static/js/app.js"></script>
 </body>
 </html>
