renovado makefile + texto en blanco

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="dashboard">
-        <h1>GameShelf</h1>
+        <h1 class="main-title">GameShelf</h1>
         <p>En esta pagina podras armar listas con los juegos que comenzaste, terminaste, tus favoritos, etc. Una forma organizativa y visual de ver tu historia con los juegos.</p>
         
         <input type="text" id="search" placeholder="Buscar en Steam..." autocomplete="off">
@@ -18,7 +18,9 @@
         <div class="popular-games">
             <div class="popular-header">
                 <h2>Popular Games</h2>
-                <div class="header-icon"></div>
+                <div class="header-icon">
+                    <i class="fas fa-clock fa-xl"></i>
+                </div>
             </div>
 
             <div class="game-list">
