--- a/static/login.html
+++ b/static/login.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/styles.css">
-    <title>Título de la Página</title>
+    <title>GameShelf</title>
     
 </head>
 <body>
